--- a/portfolio.html
+++ b/portfolio.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
         <nav>
         <a href="./index.html">WebStudio</a>    
     <ul>
-    <li><a href="">Studio</a></li>
-    <li><a href="">Portfolio</a></li>
+    <li><a href="./index.html">Studio</a></li>
+    <li><a href="./portfolio.html">Portfolio</a></li>
     <li><a href="">Contacts</a></li>
     </ul>
     </nav>
@@ -46,47 +47,47 @@
 <section>
     <ul>
     <li>
-        <img src="./images/banking1.jpg" alt="banking app interface concept">
+        <img src="./images/banking1.jpg" alt="banking app interface concept" width="360">
     <h1>Banking App Interface Concept</h1>
     <p>App</p>
 </li>
     <li>
-        <img src="./images/payment1.jpg" alt="cashless payment">
+        <img src="./images/payment1.jpg" alt="cashless payment" width="360">
     <h1>Cashless Payment</h1>
     <p>Marketing</p>
 </li>
     <li>
-        <img src="./images/meditation1.jpg" alt="meditaion app">
+        <img src="./images/meditation1.jpg" alt="meditaion app" width="360">
     <h1>Meditaion App</h1>
     <p>App</p>
 </li>
     <li>
-        <img src="./images/taxi1.jpg" alt="taxi service">
+        <img src="./images/taxi1.jpg" alt="taxi service" width="360">
     <h1>Taxi Service</h1>
     <p>Marketing</p>
 </li>
     <li>
-        <img src="./images/screen1.jpg" alt="screen illustrations">
+        <img src="./images/screen1.jpg" alt="screen illustrations" width="360">
     <h1>Screen Illustrations</h1>
     <p>Design</p>
 </li>
     <li>
-        <img src="./images/courses1.jpg" alt="online courses">
+        <img src="./images/courses1.jpg" alt="online courses" width="360">
     <h1>Online Courses</h1>
     <p>Marketing</p>
 </li>
     <li>
-        <img src="./images/instagram1.jpg" alt="instagram stories concept">
+        <img src="./images/instagram1.jpg" alt="instagram stories concept" width="360">
     <h1>Instagram Stories Concept</h1>
     <p>Design</p>
 </li>
     <li>
-        <img src="./images/food1.jpg" alt="organic food">
+        <img src="./images/food1.jpg" alt="organic food" width="360">
     <h1>Organic Food</h1>
     <p>Web Site</p>
 </li>
     <li>
-        <img src="./images/coffee1.jpg" alt="fresh coffee">
+        <img src="./images/coffee1.jpg" alt="fresh coffee" width="360">
     <h1>Fresh Coffee</h1>
     <p>Web Site</p>
 </li>
