--- a/index.html
+++ b/index.html
@@ -5,77 +5,89 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!--Шрифти беремо із Гугл Фонтс-->
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
- <header>
-    <nav>
-    <a href="./index.html">WebStudio</a>    
-<ul>
-<li><a href="">Studio</a></li>
-<li><a href="">Portfolio</a></li>
-<li><a href="">Contacts</a></li>
+ </header class="header">
+ <!--логотип-->
+    <nav class="site-nav">
+        <a href="./index.html" class="link logo"> <span class="part-of-word">Web</span>Studio</a> 
+
+    <!--список посилань на інші сторінки сайту, навігація-->
+<ul class="list menu">
+<li class="menu-item"><a href="./index.html" class="link menu-link">Studio</a></li>
+<li class="menu-item"><a href="./portfolio.html" class="link menu-link">Portfolio</a></li>
+<li class="menu-item"><a href="" class="link menu-link">Contacts</a></li>
 </ul>
+
+<!--електронна адреса та телефон-->
 </nav>
-<address>
-    <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+<address class="contact-mail-phone">
+    <ul class="list">
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
 </ul>
 </address>
 </header>
  <main>
-<section>
-    <h1>Effective Solutions for Your Business</h1> 
-    <button type="button">Order Service</button>
+    <!--Герой-->
+<section class="hero">
+    <h1 clas="main-head">Effective Solutions for Your Business</h1> 
+    <button class="button" type="button" >Order Service</button>
 </section>  
-<section>
+   <!--переваги-->
+<section class="second">
     <h2></h2>
-    <ul>
-        <li><h3>Strategy</h3>
-        <p>Our goal is to identify the business
+    <ul class="list">
+        <li><h3 class="third-head">Strategy</h3>
+        <p class="main-text">Our goal is to identify the business
             problem to walk away with the perfect and creative solution. </p>
         </li>
-        <li><h3>Punctuality</h3>
-        <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+        <li><h3 class="third-head">Punctuality</h3>
+        <p class="main-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
     </li>
-    <li><h3>Diligence</h3>
-        <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+    <li><h3 class="third-head">Diligence</h3>
+        <p class="main-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
     </li>
-    <li><h3>Technologies</h3>
-    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+    <li><h3 class="third-head">Technologies</h3>
+    <p class="main-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
 </li>
     </ul>  
 </section>
-<section>
-    <h2>What are we doing</h2>
-    <ul>
+<!--Що ми робимо-->
+<section class="third">
+    <h2 class="second-head">What are we doing</h2>
+    <ul class="list">
     <li><img src="./images/Monitor1.jpg" alt="Monitorw" width=360></li>
     <li><img src="./images/selltelephone1.jpg" alt="selltelephone" width="360"></li>
     <li><img src="./images/work1.jpg" alt="work" width=360></li> 
     </ul>
 </section>
-<section>
-    <h2>Our Team</h2>
-    <ul>
+<!--Наша команда-->
+<section class="fourth">
+    <h2 class="second-head">Our Team</h2>
+    <ul class="list">
         <li><img src="./images/marc1.jpg" alt="Marc" width=264>
-        <h3>Mark Guerrero</h3>
-        <p>Product Designer</p></li>
+        <h3 class="third-head">Mark Guerrero</h3>
+        <p class="main-text">Produ class="main-text"ct Designer</p></li>
         <li><img src="./images/tom1.jpg" alt="Tom" width=264>
-        <h3>Tom Ford</h3>
-        <p>Frontend Developer</p></li>
+        <h3 class="third-head">Tom Ford</h3>
+        <p class="main-text">Frontend Developer</p></li>
         <li><img src="./images/camila1.jpg" alt="Camila" width=264>
-        <h3>Camila Garcia</h3>
-        <p>Marketing</p></li>
+        <h3 class="third-head">Camila Garcia</h3>
+        <p class="main-text">Marketing</p></li>
         <li><img src="./images/daniel1.jpg" alt="Daniel" width=264>
-        <h3>Daniel Wilson</h3>
-        <p>UI Designer</p></li>
+        <h3 class="third-head">Daniel Wilson</h3>
+        <p class="main-text">UI Designer</p></li>
     </ul>
 </section>
 </main>
-<footer>
-    <a href="./index.html">WebStudio</a>
-    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+<!--Футер-->
+<footer class="footer">
+    <a href="./index.html" class="link logo-foot"> <span class="part-of-word-foot">Web</span>Studio</a> 
+    <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 </body>
 </html>
