--- a/portfolio.html
+++ b/portfolio.html
@@ -4,99 +4,105 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>portfolio</title>
+    <title>Document</title>
+    <!--Шрифти беремо із Гугл Фонтс-->
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-        <a href="./index.html">WebStudio</a>    
-    <ul>
-    <li><a href="./index.html">Studio</a></li>
-    <li><a href="./portfolio.html">Portfolio</a></li>
-    <li><a href="">Contacts</a></li>
-    </ul>
-    </nav>
-    <address>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-    </ul>
-    </address>
-    </header> 
+ </header class="header">
+ <!--логотип-->
+    <nav class="site-nav">
+        <a href="./index.html" class="link logo"> <span class="part-of-word">Web</span>Studio</a> 
+
+    <!--список посилань на інші сторінки сайту, навігація-->
+<ul class="list menu">
+<li class="menu-item"><a href="/index.html" class="link menu-link">Studio</a></li>
+<li class="menu-item"><a href="./portfolio.html" class="link menu-link">Portfolio</a></li>
+<li class="menu-item"><a href="" class="link menu-link">Contacts</a></li>
+</ul>
+
+<!--електронна адреса та телефон-->
+</nav>
+<address class="contact-mail-phone">
+    <ul class="list">
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
+</ul>
+</address>
+</header>
     <main>
-    <section>
+    <section class="third">
+        <h2></h2>
     <ul>
         <li>
-           <button type="button">All</button>
+           <button class="nav-btn" type="button">All</button>
         </li>
         <li>
-            <button type="button">Web Site</button>
+            <button class="nav-btn" type="button">Web Site</button>
         </li>
         <li>
-            <button type="button">App</button>
+            <button class="nav-btn" type="button">App</button>
         </li>
         <li>
-            <button type="button">Design</button>
+            <button class="nav-btn" type="button">Design</button>
         </li>
         <li>
-            <button type="button">Marketing</button>
+            <button class="nav-btn" type="button">Marketing</button>
         </li>
     </ul>
-</section>
-<section>
     <ul>
     <li>
         <img src="./images/banking1.jpg" alt="banking app interface concept" width="360">
-    <h1>Banking App Interface Concept</h1>
-    <p>App</p>
+    <h3 clas="third-head">Banking App Interface Concept</h3>
+    <p class="main-text">App</p>
 </li>
     <li>
         <img src="./images/payment1.jpg" alt="cashless payment" width="360">
-    <h1>Cashless Payment</h1>
-    <p>Marketing</p>
+    <h3 clas="third-head">Cashless Payment</h3>
+    <p class="main-text">Marketing</p>
 </li>
     <li>
         <img src="./images/meditation1.jpg" alt="meditaion app" width="360">
-    <h1>Meditaion App</h1>
-    <p>App</p>
+    <h3 clas="third-head">Meditaion App</h3>
+    <p class="main-text">App</p>
 </li>
     <li>
         <img src="./images/taxi1.jpg" alt="taxi service" width="360">
-    <h1>Taxi Service</h1>
-    <p>Marketing</p>
+    <h3 clas="third-head">Taxi Service</h3>
+    <p class="main-text">Marketing</p>
 </li>
     <li>
         <img src="./images/screen1.jpg" alt="screen illustrations" width="360">
-    <h1>Screen Illustrations</h1>
-    <p>Design</p>
+    <h3 clas="third-head">Screen Illustrations</h3>
+    <p class="main-text">Design</p>
 </li>
     <li>
         <img src="./images/courses1.jpg" alt="online courses" width="360">
-    <h1>Online Courses</h1>
-    <p>Marketing</p>
+    <h3 clas="third-head">Online Courses</h3>
+    <p class="main-text">Marketing</p>
 </li>
     <li>
         <img src="./images/instagram1.jpg" alt="instagram stories concept" width="360">
-    <h1>Instagram Stories Concept</h1>
-    <p>Design</p>
+    <h3 clas="third-head">Instagram Stories Concept</h3>
+    <p class="main-text">Design</p>
 </li>
     <li>
         <img src="./images/food1.jpg" alt="organic food" width="360">
-    <h1>Organic Food</h1>
-    <p>Web Site</p>
+    <h3 clas="third-head">Organic Food</h3>
+    <p class="main-text">Web Site</p>
 </li>
     <li>
         <img src="./images/coffee1.jpg" alt="fresh coffee" width="360">
-    <h1>Fresh Coffee</h1>
-    <p>Web Site</p>
+    <h3 clas="third-head">Fresh Coffee</h3>
+    <p class="main-text">Web Site</p>
 </li>
 </ul>
 </section>
 </main>
-<footer>
-    <a href="./index.html">WebStudio</a>
-    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+<footer class="footer">
+    <a href="./index.html" class="link logo-foot"> <span class="part-of-word-foot">Web</span>Studio</a> 
+    <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 </body>
 </html>
