--- a/index.html
+++ b/index.html
@@ -24,34 +24,34 @@
 
 <!--електронна адреса та телефон-->
 </nav>
-<address class="contact-mail-phone">
+<address>
     <ul class="list">
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
+        <li><a href="mailto:info@devstudio.com" class="link contact-mail-phone">info@devstudio.com</a></li>
+        <li><a href="tel:+110001111111" class="link contact-mail-phone">+11 (000) 111-11-11</a></li>
 </ul>
 </address>
 </header>
  <main>
     <!--Герой-->
 <section class="hero">
-    <h1 clas="main-head">Effective Solutions for Your Business</h1> 
+    <h1>Effective Solutions for Your Business</h1> 
     <button class="button" type="button" >Order Service</button>
 </section>  
    <!--переваги-->
 <section class="second">
     <h2></h2>
     <ul class="list">
-        <li><h3 class="third-head">Strategy</h3>
+        <li><h3 class="photo-header">Strategy</h3>
         <p class="main-text">Our goal is to identify the business
             problem to walk away with the perfect and creative solution. </p>
         </li>
-        <li><h3 class="third-head">Punctuality</h3>
+        <li><h3 class="photo-header">Punctuality</h3>
         <p class="main-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
     </li>
-    <li><h3 class="third-head">Diligence</h3>
+    <li><h3 class="photo-header">Diligence</h3>
         <p class="main-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
     </li>
-    <li><h3 class="third-head">Technologies</h3>
+    <li><h3 class="photo-header">Technologies</h3>
     <p class="main-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
 </li>
     </ul>  
@@ -70,16 +70,16 @@
     <h2 class="second-head">Our Team</h2>
     <ul class="list">
         <li><img src="./images/marc1.jpg" alt="Marc" width=264>
-        <h3 class="third-head">Mark Guerrero</h3>
-        <p class="main-text">Produ class="main-text"ct Designer</p></li>
+        <h3 class="photo-header">Mark Guerrero</h3>
+        <p class="main-text">Designer</p></li>
         <li><img src="./images/tom1.jpg" alt="Tom" width=264>
-        <h3 class="third-head">Tom Ford</h3>
+        <h3 class="photo-header">Tom Ford</h3>
         <p class="main-text">Frontend Developer</p></li>
         <li><img src="./images/camila1.jpg" alt="Camila" width=264>
-        <h3 class="third-head">Camila Garcia</h3>
+        <h3 class="photo-header">Camila Garcia</h3>
         <p class="main-text">Marketing</p></li>
         <li><img src="./images/daniel1.jpg" alt="Daniel" width=264>
-        <h3 class="third-head">Daniel Wilson</h3>
+        <h3 class="photo-header">Daniel Wilson</h3>
         <p class="main-text">UI Designer</p></li>
     </ul>
 </section>
