--- a/portfolio.html
+++ b/portfolio.html
@@ -17,24 +17,24 @@
 
     <!--список посилань на інші сторінки сайту, навігація-->
 <ul class="list menu">
-<li class="menu-item"><a href="/index.html" class="link menu-link">Studio</a></li>
+<li class="menu-item"><a href="./index.html" class="link menu-link">Studio</a></li>
 <li class="menu-item"><a href="./portfolio.html" class="link menu-link">Portfolio</a></li>
 <li class="menu-item"><a href="" class="link menu-link">Contacts</a></li>
 </ul>
 
 <!--електронна адреса та телефон-->
 </nav>
-<address class="contact-mail-phone">
+<address>
     <ul class="list">
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
+        <li><a href="mailto:info@devstudio.com" class="link contact-mail-phone">info@devstudio.com</a></li>
+        <li><a href="tel:+110001111111" class="link contact-mail-phone">+11 (000) 111-11-11</a></li>
 </ul>
 </address>
 </header>
     <main>
-    <section class="third">
-        <h2></h2>
-    <ul>
+    <section>
+        <h1></h1>
+    <ul class="list">
         <li>
            <button class="nav-btn" type="button">All</button>
         </li>
@@ -51,50 +51,50 @@
             <button class="nav-btn" type="button">Marketing</button>
         </li>
     </ul>
-    <ul>
-    <li>
+    <ul class="list">
+    <li class="photo-header">
         <img src="./images/banking1.jpg" alt="banking app interface concept" width="360">
-    <h3 clas="third-head">Banking App Interface Concept</h3>
+    <h2>Banking App Interface Concept</h2>
     <p class="main-text">App</p>
 </li>
-    <li>
+    <li class="photo-header">
         <img src="./images/payment1.jpg" alt="cashless payment" width="360">
-    <h3 clas="third-head">Cashless Payment</h3>
+    <h2>Cashless Payment</h2>
     <p class="main-text">Marketing</p>
 </li>
-    <li>
+    <li class="photo-header">
         <img src="./images/meditation1.jpg" alt="meditaion app" width="360">
-    <h3 clas="third-head">Meditaion App</h3>
+    <h2>Meditaion App</h2>
     <p class="main-text">App</p>
 </li>
-    <li>
+    <li class="photo-header">
         <img src="./images/taxi1.jpg" alt="taxi service" width="360">
-    <h3 clas="third-head">Taxi Service</h3>
+    <h2>Taxi Service</h2>
     <p class="main-text">Marketing</p>
 </li>
-    <li>
+    <li class="photo-header">
         <img src="./images/screen1.jpg" alt="screen illustrations" width="360">
-    <h3 clas="third-head">Screen Illustrations</h3>
+    <h2>Screen Illustrations</h2>
     <p class="main-text">Design</p>
 </li>
-    <li>
+    <li class="photo-header">
         <img src="./images/courses1.jpg" alt="online courses" width="360">
-    <h3 clas="third-head">Online Courses</h3>
+    <h2>Online Courses</h2>
     <p class="main-text">Marketing</p>
 </li>
-    <li>
+    <li class="photo-header">
         <img src="./images/instagram1.jpg" alt="instagram stories concept" width="360">
-    <h3 clas="third-head">Instagram Stories Concept</h3>
+    <h2>Instagram Stories Concept</h2>
     <p class="main-text">Design</p>
 </li>
-    <li>
+    <li class="photo-header">
         <img src="./images/food1.jpg" alt="organic food" width="360">
-    <h3 clas="third-head">Organic Food</h3>
+    <h2>Organic Food</h2>
     <p class="main-text">Web Site</p>
 </li>
-    <li>
+    <li class="photo-header">
         <img src="./images/coffee1.jpg" alt="fresh coffee" width="360">
-    <h3 clas="third-head">Fresh Coffee</h3>
+    <h2>Fresh Coffee</h2>
     <p class="main-text">Web Site</p>
 </li>
 </ul>
