--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
- </header class="header">
+<body> 
+    <header>
  <!--логотип-->
     <nav class="site-nav">
         <a href="./index.html" class="link logo"> <span class="part-of-word">Web</span>Studio</a> 
@@ -34,7 +34,7 @@
  <main>
     <!--Герой-->
 <section class="hero">
-    <h1>Effective Solutions for Your Business</h1> 
+    <h1 class="hero">Effective Solutions for Your Business</h1> 
     <button class="button" type="button" >Order Service</button>
 </section>  
    <!--переваги-->
