--- a/portfolio.html
+++ b/portfolio.html
@@ -52,49 +52,49 @@
         </li>
     </ul>
     <ul class="list">
-    <li class="photo-header">
+    <li>
         <img src="./images/banking1.jpg" alt="banking app interface concept" width="360">
-    <h2>Banking App Interface Concept</h2>
+    <h2 class="photo-header">Banking App Interface Concept</h2>
     <p class="main-text">App</p>
 </li>
-    <li class="photo-header">
+    <li>
         <img src="./images/payment1.jpg" alt="cashless payment" width="360">
-    <h2>Cashless Payment</h2>
+    <h2 class="photo-header">Cashless Payment</h2>
     <p class="main-text">Marketing</p>
 </li>
-    <li class="photo-header">
+    <li>
         <img src="./images/meditation1.jpg" alt="meditaion app" width="360">
-    <h2>Meditaion App</h2>
+    <h2 class="photo-header">Meditaion App</h2>
     <p class="main-text">App</p>
 </li>
-    <li class="photo-header">
+    <li>
         <img src="./images/taxi1.jpg" alt="taxi service" width="360">
-    <h2>Taxi Service</h2>
+    <h2 class="photo-header">Taxi Service</h2>
     <p class="main-text">Marketing</p>
 </li>
-    <li class="photo-header">
+    <li>
         <img src="./images/screen1.jpg" alt="screen illustrations" width="360">
-    <h2>Screen Illustrations</h2>
+    <h2 class="photo-header">Screen Illustrations</h2>
     <p class="main-text">Design</p>
 </li>
-    <li class="photo-header">
+    <li>
         <img src="./images/courses1.jpg" alt="online courses" width="360">
-    <h2>Online Courses</h2>
+    <h2 class="photo-header">Online Courses</h2>
     <p class="main-text">Marketing</p>
 </li>
-    <li class="photo-header">
+    <li>
         <img src="./images/instagram1.jpg" alt="instagram stories concept" width="360">
-    <h2>Instagram Stories Concept</h2>
+    <h2 class="photo-header">Instagram Stories Concept</h2>
     <p class="main-text">Design</p>
 </li>
-    <li class="photo-header">
+    <li>
         <img src="./images/food1.jpg" alt="organic food" width="360">
-    <h2>Organic Food</h2>
+    <h2 class="photo-header">Organic Food</h2>
     <p class="main-text">Web Site</p>
 </li>
-    <li class="photo-header">
+    <li>
         <img src="./images/coffee1.jpg" alt="fresh coffee" width="360">
-    <h2>Fresh Coffee</h2>
+    <h2 class="photo-header">Fresh Coffee</h2>
     <p class="main-text">Web Site</p>
 </li>
 </ul>
